--- a/kanpai_logger/pubspec.yaml
+++ b/kanpai_logger/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   email_validator: '^1.0.0'
+  shared_preferences: '^0.5.8'
+
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +47,8 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
+  assets: 
+    - assets/images/logo.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
